Changes for 4.0.0alpha3

New features:
..F.I..... [ZBXNEXT-4273] added default event status colors in themes with option to customize them (ashubin)
...G...... [ZBXNEXT-4216] added 'copytruncate' log file rotation support for logrt[], logrt.count[] (Andris)

Bug fixes:
..FG...PS. [ZBXNEXT-3581] dropped plain text protocol support and made header mandatory; fixed IP fragmentation handling by including header in Zabbix get request, Zabbix server/proxy passive check request and frontend request to Zabbix server (Sasha, vso)
........S. [ZBX-13194] fixed incorrect processing of zabbix[wcache,value,*] internal check (Sergejs)
.......PS. [ZBX-13060] added limitation for meaningless server reconnection attempts to incorrectly configured passive proxy (viktors)
...G...... [ZBX-13233] added new memory metrics for Linux platform - "active", "anon", "inactive" and "slabs"; thanks to Tomasz Kłoczko for the original patch (viktors)
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
...G...... [ZBX-11720] fixed memory leak which breaks vfs.fs.size, vfs.fs.inode and vfs.dir.size items if compiled with LeakSanitizer (Andris)
........S. [ZBX-13131] fixed truncated multiline text values from network discovery SNMP checks (viktors)
...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)
....I..... [ZBX-12045] fixed inconsistencies in configure -h output (MVekslers)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
..F....... [ZBX-13223] fixed graphs duplication in graph preview (ashubin)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13214] added support of \0 matching group for regsub and iregsub methods (gcalenko, Sasha)